--- a/style.css
+++ b/style.css
@@ -10,21 +10,20 @@
   font-variation-settings: "wdth" 100;
 }
 form {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
 .form_outer {
-  border: 1px solid;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   padding: 50px;
-  width: 50%;
-  /* margin: 0 auto; */
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 35%;
 }
 
 .form-fields {
@@ -79,7 +78,7 @@ form {
   cursor: pointer;
 }
 .submit-btn button[type="submit"] {
-  background-color: #7fd9ff;
+  background-color: #2ecb70;
   color: #fff;
   outline: none;
   border: none;
